# efficient-dl-systems

week02_fast_pipelines/homework/: report.ipynb  requirements.txt
week02_fast_pipelines/homework/task1/: train.py
week02_fast_pipelines/homework/task2/: dataset.py  run_epoch.py
week02_fast_pipelines/homework/task3/: dataset.py  profiler.py  run_epoch.py  vit.py
week06_dl_arithmetic/homework/: efficient_train.py  pyproject.toml  report.ipynb
week06_dl_arithmetic/homework/calculators/: base.py  baseline_calculator.py  efficient_calculator.py
week06_dl_arithmetic/homework/efficient_model/: __init__.py  attention.py  loss.py  norm.py  swiglu.py
week06_dl_arithmetic/homework/efficient_optimizer/: ademamix.py
week09_inference_algorithms/homework/: homework.ipynb
