[project]
name = "efficient-dl-week06"
version = "0.1.0"
description = "Week 6 homework: Optimizing Transformer Training"
requires-python = ">=3.10"
dependencies = [
    "packaging==23.2",
    "torch==2.7.1",
    "liger-kernel==0.6.2",
    "numpy==1.26.4",
    "psutil==7.0.0",
    "pytest==8.1.1",
]

[tool.setuptools.packages.find]
include = ["model*", "efficient_model*", "optimizer*", "efficient_optimizer*", "calculators*"]

[project.optional-dependencies]
flash = [
    "flash-attn==2.8.3",
]

[tool.uv]
# flash-attn requires torch to be installed first and needs --no-build-isolation
no-build-isolation-package = ["flash-attn"]
